# qt_demos

./: .gitignore
ColorPicker/: CMakeLists.txt  main.cpp  main.qml
ImageEditor/: CMakeLists.txt  main.cpp  main.qml
ImageEditor/BlankView/: BlankView.qml
ImageEditor/ColorFormatter/: colorformatter.cpp  colorformatter.h
ImageEditor/DrapHighlight/: DrapHighLight.qml
ImageEditor/ImageBrowser/: ImageBrowser.qml  ImageBrowserItemView.qml  imagebrowserviewmodel.cpp  imagebrowserviewmodel.h
ImageEditor/ImageShower/: ImageShower.qml  imageshowerviewmodel.cpp  imageshowerviewmodel.h
ImageEditor/Models/ImageAsset/: imageasset.cpp  imageasset.h
ImageEditor/RightSlider/: RightSlider.qml  rightsliderviewmodel.cpp  rightsliderviewmodel.h
ImageEditor/RightSlider/Item/: RightSliderItem.qml
ImageEditor/Tools/ImageProvider/: localimageprovider.cpp  localimageprovider.h
PlayerDemo/: CMakeLists.txt  CMakeLists.txt.user.7600022  main.cpp  qml.qrc
PlayerDemo/helper/: coverimageprovider.h  videoinfofetcher.cpp  videoinfofetcher.h
PlayerDemo/model/ListViewModel/: videoassetmodel.cpp  videoassetmodel.h
PlayerDemo/model/VideoAsset/: videoasset.cpp  videoasset.h
PlayerDemo/qml/: ControlBar.qml  Gallery.qml  Player.qml  main.qml
image_editor/: CMakeLists.txt  main.cpp  resources.qrc
